k8s/manifests/app_full.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-app-static
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-deploy
  namespace: go-app-static
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-app-demo
  template:
    metadata:
      labels:
        app: go-app-demo
    spec:
      containers:
        - name: go-app-container
          image: ghcr.io/heschmat/devops_eks_portfolio:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
      imagePullSecrets:
        - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: go-app-svc
  namespace: go-app-static
spec:
  selector:
    app: go-app-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
